layered architecture, connect db supabase
